--- a/produ/src/main/webapp/index_v148b2.html
+++ b/produ/src/main/webapp/index_v148b2.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-
-
-<!-- Mirrored from www.zi-han.net/theme/hplus/index_v1.html?v=4.0 by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 20 Jan 2016 14:20:20 GMT -->
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--360浏览器优先以webkit内核解析-->
-
 
     <title>H+ 后台主题UI框架 - 主页示例</title>
 
@@ -26,11 +22,11 @@
 <body class="gray-bg">
 <div class="row  border-bottom white-bg dashboard-header">
     <div class="col-sm-12">
-        <blockquote class="text-warning" style="font-size:14px">您是否需要自己做一款后台、会员中心等等的，但是又缺乏html等前端知识…
-            <br>您是否一直在苦苦寻找一款适合自己的后台主题…
+        <blockquote class="text-warning" style="font-size:14px">有风吹到你的时候，要记得，那是我委托清风带给你温馨的问候!!!
+           <!-- <br>您是否一直在苦苦寻找一款适合自己的后台主题…
             <br>您是否想做一款自己的web应用程序…
-            <br>…………
-            <h4 class="text-danger">那么，现在H+来了</h4>
+            <br>…………-->
+            <!--<h4 class="text-danger">有风吹到你的时候，要记得，那是我委托清风带给你温馨的问候!!!</h4>-->
         </blockquote>
 
         <hr>
@@ -88,16 +84,17 @@
 
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>二次开发</h5>
+                    <h5>欢迎欢迎</h5>
                 </div>
                 <div class="ibox-content">
-                    <p>我们提供基于H+的二次开发服务，具体费用请联系作者。</p>
+
+                    <p class="text-warning" style="font-size:14px">我们提供基于H+的服务，具体请联系作者。</p>
                     <p>同时，我们也提供以下服务：</p>
                     <ol>
-                        <li>基于WordPress的网站建设和主题定制</li>
-                        <li>PSD转WordPress主题</li>
-                        <li>PSD转XHTML</li>
-                        <li>Html页面（CSS+XHTML+jQuery）制作</li>
+                        <li>内容一</li>
+                        <li>内容一</li>
+                        <li>内容一</li>
+                        <li>内容一</li>
                     </ol>
                 </div>
             </div>
@@ -503,7 +500,7 @@
                                             class="pull-right">2014.11.18</code>
                                     </h4>
                                 </div>
-                                <div id="v11" class="panel-collapse collapse">
+                                <div id="v111" class="panel-collapse collapse">
                                     <div class="panel-body">
                                         <ol>
                                             <li>修复了几处问题。</li>
@@ -534,10 +531,10 @@
         <div class="col-sm-4">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>购买说明</h5>
+                    <h5>详细说明</h5>
                 </div>
                 <div class="ibox-content">
-                    <p>购买后我可以获得什么？</p>
+                    <p>购买后你可以获得什么？</p>
                     <ol>
                         <li>所有源码(未压缩、带注释版本)；</li>
                         <li>说明文档；</li>
@@ -548,10 +545,9 @@
                         <li>……</li>
                     </ol>
                     <hr>
-                    <p>如果需要购买H+主题，可联系左边联系方式</p>
+                    <p>如果需要购买H+主题，可联系下边联系方式</p>
                     <div class="alert alert-warning">
-                        xxx
-                        <br>xxx
+                        韩先生：17190189091
                     </div>
                     <p id="pay-qrcode">
                         <!--<a href="javascript:;"><img src="images/pay.png" width="100%" alt="请使用手机支付宝或者微信扫码支付">
@@ -667,5 +663,4 @@
 </body>
 
 
-<!-- Mirrored from www.zi-han.net/theme/hplus/index_v1.html?v=4.0 by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 20 Jan 2016 14:20:20 GMT -->
 </html>
